Lille opdatering af projektdokumentation efter review

--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -16,7 +16,7 @@
 \begin{enumerate}
 	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 V, $\pm$ 200mV 
 	\item Måle strømniveauet ved trinskifteren og forbrugerne mellem 0 og 5A, $\pm$ 100mA
-	\item Måle power factor $\pm$ 10$\%$
+	\item Beregne power factor $\pm$ 10$\%$
 \end{enumerate}
 
 \subsection{Brugergrænseflade}
