--- a/ProjektDokumentation/sektioner/forside.tex
+++ b/ProjektDokumentation/sektioner/forside.tex
@@ -11,9 +11,9 @@
 	\vspace{2cm}
 	{\Large
 		201509249 - Caroline Møller Sørensen\\
-		201611140 - Sophia Amailie Mortensen\\
+		201611140 - Sophia Amalie Mortensen\\
+		201505115 - Laurids Givskov Jørgensen\\		
 		201505195 - Dennis Slot Larsen \\
-		201505115 - Laurids Givskov Jørgensen\\
 		201508333 - Søren Jensen\\
 		13114 - Jeppe Hansen\\  }
 	\vfill
