BDD, IBD og brugergrænseflade opdateret i henhold til review

--- a/ProjektDokumentation/sektioner/Arkitektur/AllokeringsDiagram.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/AllokeringsDiagram.tex
@@ -16,3 +16,5 @@ På figur \ref{fig:Allokering} ses allokeringsdiagram for spændningsregulatoren
 	\caption{Allokeringsdiagram for spændingsregulator}
 	\label{fig:Allokering}
 \end{figure}
+
+\newpage
