--- a/ProjektDokumentation/sektioner/Arkitektur/BrugerGraenseFlade.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/BrugerGraenseFlade.tex
@@ -3,4 +3,20 @@
 
 \section{Brugergrænseflade}
 (Beskrivelse af skræm på PLC’en) \\
-Indsæt billede \\
+\subsection{Automatisk mode}
+\begin{figure}[H] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.9\textwidth]{Figure/HMIAutomatiskMode}
+	\caption{HMI Automatisk mode}
+	\label{fig:HMIAutomatikMode}
+\end{figure}
+
+
+
+\subsection{Manuel mode}
+\begin{figure}[H] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.9\textwidth]{Figure/HMIManuelMode}
+	\caption{HMI Manuel mode}
+	\label{fig:HMIManuelMode}
+\end{figure}
