--- a/ProjektDokumentation/sektioner/Arkitektur/IBD.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/IBD.tex
@@ -13,7 +13,7 @@ Herunder på figur \ref{fig:IBDSpaendingsregulator} ses et IBD for spændingsreg
 
 \subsection{Signalbeskrivelse}
 
-\begin{table}[ph]
+\begin{table}[H]
 	\centering
 	\begin{tabular}{|l|l|l|p{2cm}|p{4cm}|}
 		\hline
