--- a/ProjektDokumentation/sektioner/foranalyse.tex
+++ b/ProjektDokumentation/sektioner/foranalyse.tex
@@ -10,7 +10,10 @@ Emir udleverede to transformere. Den ene er der ingen mærkeplade og ledningerne
 Det er besluttet at lave Styringsenheden på en PLC, dette gøres for at realisere, hvordan det ville laves i virkeligheden. Alternativt kunne det laves på en PSOC eller Arduino, men da der på dette semester er undervisning i PLC styring virker det derfor oplagt.
 
 \section{Overvejelser omkring måleenhederne}
-Det var først tænkt at der kunne laves eller købes nogle sensorer som skulle tilsluttes PLC'en. PLC'en kan dog ikke måle hurtigt nok på AC forbindelser til at få et reelt billed af signalet. Derfor bruges PSOC til at måle og sample signalet og sende det derfra til PLC'en.
+Det var først tænkt at der kunne laves eller købes nogle sensorer som skulle tilsluttes PLC'en. PLC'en kan dog ikke måle hurtigt nok på AC forbindelser til at få et reelt billede af signalet. Derfor bruges PSOC til at måle og sample signalet og sende det derfra til PLC'en.
+
+\section{Simulering af distributionslinje}
+For at opnå en virkelighedstro simulering af en distributionslinje blev der i starten af projektet taget kontakt til energiselskabet Eniig. Herfra modtog projektgruppen data på et udsnit af et distributionsnet. Forinden var der i samarbejde med vejleder fundet kabeldata på nkt cables hjemmeside. Afstandene mellem distributionstransformer og belastninger i Eniigs data er forholdsvis korte (100-500 meter). Med de fundne kabeldata vil der ikke være modstand- og spolevirkning, der vil påvirke spændingen i simuleringen. Velvidende at det ikke stemmer overens med virkeligheden, valgtes det derfor at simulere en distributionslinje på 50 kilometer. 
 
 \section{Protokoller}
 
