Dokumentation distributionslinje og belastning

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -143,6 +143,8 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/AllokeringsDiagram}
 \input{sektioner/Arkitektur/BrugerGraenseFlade}
 \input{sektioner/foranalyse}
+\input{sektioner/Design/Distributionslinje}
+\input{sektioner/Design/Belastning}
 \printbibliography
 
 \end{document}
