--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../prj4projektdokumentation.tex
+% !TEX root = ../../prj4projektdokumentation.tex
 \section{Ikke funktionelle krav}
 % for spændingsregulator
 \begin{table}[htbp]
@@ -6,40 +6,20 @@
 	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
 		\hline
 		\textbf{Spændingsregulator} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Punkt ?? & xxx & xxx & xxx & xxx \\\hline
-		Punkt?? & xx & xx & xx & xx \\\hline
-		Punkt?? & xx & xx & xx & xx \\\hline
-		Punkt?? & xx & xx & xx & xx \\\hline
-		
-
+		Nominel spænding på primærsiden er 24VAC & Spændingen på primærsiden måles. & Den målte værdi er 24VAC. & xxx & xxx \\\hline
+		Nominel spænding på sekundær side er 4,5 eller 6 VAC afhængig af trin & Spændingen på sekundærsiden måles for hhv. trin 4, 5 og 6. & Den målte værdi er 4, 5 eller 6 VAC alt efter valgt trin. & xx & xx \\\hline
+		Maks strøm på sekundær side er 1 A. & Strømmen på sekundærsiden måles. & Den målte værdi overstiger ikke 1A. & xx & xx \\\hline
 	\end{tabular}
-
 	
 \end{table}
-%for distributionslinje
 
-\begin{table}[htbp]
-	\centering
-	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
-		\hline
-		\textbf{Distributionslinje} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Punkt ?? & xxx & xxx & xxx & xxx \\\hline
-		 Punkt?? & xx & xx & xx & xx \\\hline
-		
-		
-	\end{tabular}
-
-	
-\end{table}
 % for belastning
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
 		\hline
 		\textbf{Belastning} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Punkt ?? & xxx & xxx & xxx & xxx \\\hline
-		Punkt?? & xx & xx & xx & xx \\\hline
-		
+		Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. & Den givne modstand indsættes som belastning, og spændingen herover måles. & Spændingen over belastningen måles til 3,6V. & xxx & xxx \\\hline	
 	\end{tabular}
 
 	
