Tilføjelser og opdatering

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -145,6 +145,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/foranalyse}
 \input{sektioner/Design/Distributionslinje}
 \input{sektioner/Design/Belastning}
+\input{sektioner/Design/Trinskifter}
 \printbibliography
 
 \end{document}
