--- a/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
+++ b/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
@@ -3,7 +3,7 @@
 \chapter{Design}
 
 \section{Distributionslinje}
-På baggrund af foranalysen er længden af distributionslinjen, der ønskes simuleret, valgt til 60 km. Ud fra datablade for den valgte kabeltype ses at der er vil være 0,1 $\omega$ /km og 0,219 mH/km. For at kunne simulere disse værdier er opbygget et kredsløb med 6,2 $\omega$ modstand i serie med en 13,6 mH spole. 
+På baggrund af foranalysen er længden af distributionslinjen, der ønskes simuleret, valgt til 60 km. Ud fra datablade for den valgte kabeltype ses at der er vil være 0,1 $\Omega$ /km og 0,219 mH/km. For at kunne simulere disse værdier er opbygget et kredsløb med 6,2 $\Omega$ modstand i serie med en 13,6 mH spole. 
 
 
 
