--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -146,6 +146,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/Distributionslinje}
 \input{sektioner/Design/Belastning}
 \input{sektioner/Design/Trinskifter}
+\input{modulSkabelon}
 \printbibliography
 
 \end{document}
