--- a/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
+++ b/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../../prj4projektdokumentation.tex
 
-\chapter{Design}
+\chapter{Design af distributionslinje, belastning og trinskifter}
 
 \section{Distributionslinje}
 På baggrund af foranalysen er længden af distributionslinjen, der ønskes simuleret, valgt til 60 km. Ud fra datablade for den valgte kabeltype ses at der er vil være 0,1 $\Omega$ /km og 0,219 mH/km. For at kunne simulere disse værdier er opbygget et kredsløb med 6,2 $\Omega$ modstand i serie med en 13,6 mH spole. 
