--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -137,6 +137,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Accepttestspecifikation/accepttestspecifikation}
 \input{sektioner/Accepttestspecifikation/FunktionelleKrav}
 \input{sektioner/Accepttestspecifikation/IkkeFunktionelleKrav}
+\input{sektioner/Metode/Metode}
 \input{sektioner/Arkitektur/Arkitektur}
 \input{sektioner/Arkitektur/BDD}
 \input{sektioner/Arkitektur/IBD}
