--- a/ProjektDokumentation/sektioner/Design/Belastning.tex
+++ b/ProjektDokumentation/sektioner/Design/Belastning.tex
@@ -6,7 +6,7 @@ Med denne distributionslinje og med trinskifteren, der står på 4V trinnet, kan
 
 \begin{figure}[htbp] % (alternativt [H])
 	\centering
-	\includegraphics[width=0.7\textwidth]{Figure/Belastningberegning}
+	\includegraphics[width=0.4\textwidth]{Figure/Belastningberegning}
 	\caption{Kredsløb til beregning af belastning}
 	\label{fig:Belastningberegning}
 \end{figure}
@@ -42,10 +42,10 @@ R_L^2+R_B^2+2\cdot R_L\cdot R_B+X_L^2=\frac{R_B^2}{0,81}
 \end{align}
 
 \begin{align}
-R_B^2\cdot (1-\frac{1}{0,81})+2\cdot R_L\cdot R_B+X_L^=0
+R_B^2\cdot (1-\frac{1}{0,81})+2\cdot R_L\cdot R_B+X_L=0
 \end{align}
 
-Indsætter værdier
+Værdier indsættes og herved fås:
 
 \begin{align}
 R_B^2\cdot (-0,24) +10\cdot R_B+11,94=0
