--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -35,7 +35,7 @@
 \usepackage{multirow}					% For at lave pæne tabeller
 \usepackage{hhline}						% For at lave endnu pænere tabller
 \newcolumntype{C}{>{\let\newline\\\arraybackslash\hspace{0pt}}X}
-
+\usepackage{float}
 %matematik
 \usepackage{amsmath,amssymb,mathtools,bm}
 \newcommand{\tsub}[1]{_{\textup{#1}}}
