--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -148,6 +148,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/Belastning}
 \input{sektioner/Design/Trinskifter}
 \input{sektioner/Trinskifter/Modultest}
+\input{sektioner/Integrationstest/MaalTilPlc}
 \input{modulSkabelon}
 \printbibliography
 
