tilføjelse til integrationstest mellem måleenhed og brugergrænseflade

--- a/ProjektDokumentation/sektioner/Integrationstest/MaalTilPlc.tex
+++ b/ProjektDokumentation/sektioner/Integrationstest/MaalTilPlc.tex
@@ -4,7 +4,14 @@
 
 \section{Integrationstest mellem Måleenhed og Styringsenhed}
 
-I dette afsnit testes kommunikationen mellem Måleenhed og Brugergrænsefladen. Der vil blive testet af de rigtig tal vises på skærmen, hastigheden mellem opdatering af visninger samt pålideligheden af dokumentationen. Test opstilling kan ses på figur
+I dette afsnit testes kommunikationen mellem Måleenhed og Brugergrænsefladen. Der vil blive testet af de rigtig tal vises på skærmen, hastigheden mellem opdatering af visninger samt pålideligheden af dokumentationen. Testopstilling kan ses på figur \ref{fig:opstilling1}.
+
+\begin{figure}[htbp] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.7\textwidth]{Test/Opstilling1}
+	\caption{Testopstilling af integrationstest mellem Måleenhed og Styringsenhed}
+	\label{fig:opstilling1}
+\end{figure}
 
 Til testen skal der bruges:
 \begin{itemize}
