tilføjet Net til Mål test skabelon

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -149,6 +149,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/Trinskifter}
 \input{sektioner/Trinskifter/Modultest}
 \input{sektioner/Integrationstest/MaalTilPlc}
+\input{sektioner/Integrationstest/NetTilMaal}
 \input{modulSkabelon}
 \printbibliography
 
