--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
@@ -3,12 +3,12 @@
 % for spændingsregulator
 \begin{table}[htbp]
 	\centering
-	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
+	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{3.5cm}|p{1cm}|}
 		\hline
-		\textbf{Spændingsregulator} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Nominel spænding på primærsiden er 24VAC & Spændingen på primærsiden måles. & Den målte værdi er 24VAC. & xxx & xxx \\\hline
-		Nominel spænding på sekundær side er 4,5 eller 6 VAC afhængig af trin & Spændingen på sekundærsiden måles for hhv. trin 4, 5 og 6. & Den målte værdi er 4, 5 eller 6 VAC alt efter valgt trin. & xx & xx \\\hline
-		Maks strøm på sekundær side er 1 A. & Strømmen på sekundærsiden måles. & Den målte værdi overstiger ikke 1A. & xx & xx \\\hline
+		\textbf{Spændingsregulator} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
+		Nominel spænding på primærsiden er 24VAC & Spændingen på primærsiden måles. & Den målte værdi er 24VAC. & Der måles 23.88 VAC & \checkmark \\\hline
+		Nominel spænding på sekundær side er 4,5 eller 6 VAC afhængig af trin & Spændingen på sekundærsiden måles for hhv. trin 4, 5 og 6. & Den målte værdi er 4, 5 eller 6 VAC alt efter valgt trin. & Der måles hhv. 4, 5 og 6 VAC & \checkmark \\\hline
+		Maks strøm på sekundær side er 1 A. & Strømmen på sekundærsiden måles. & Den målte værdi overstiger ikke 1A. & xx  & xx \\\hline
 	\end{tabular}
 	
 \end{table}
