--- a/ProjektDokumentation/sektioner/Termliste.tex
+++ b/ProjektDokumentation/sektioner/Termliste.tex
@@ -9,9 +9,13 @@
 	\begin{tabular}{|l|l|}
 		\hline
 		\textbf{Term} 	& \textbf{Beskrivelse} \\\hline
-		Trinskifter	& Transformer med variabelt omsætningsforhold \\\hline
+		Spændingsregulator	& Samlet system \\\hline
+		Trintransformer	& Transformer med variabelt omsætningsforhold \\\hline
+		Trinskifter	& Omfatter transtransformer og relækredsløb  \\\hline
+		Styringsenhed	& PLC, HMI og Arduino \\\hline
 		Centralt	& Ved trinskifter \\\hline
 		Decentralt 	& Ved forbrugeren \\\hline
+		Måleenhed	& PSoC og tilhørende hardware \\\hline
 		
 	\end{tabular}
 	\caption{Termbeskrivelse}
