Accepttest opdateret lidt mere

--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/FunktionelleKrav.tex
@@ -21,23 +21,25 @@
 	\begin{tabular}{|p{2cm}|p{3.5cm}|p{4cm}|p{2cm}|p{2.5cm}|}
 		\hline
 		\textbf{UC2} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Stop manuel styring & Bruger vælger automatisk mode & Systemet er i automatisk mode & xxx & xxx \\\hline
-		
-		
+		Stop manuel styring & Bruger vælger automatisk mode & Systemet er i automatisk mode & xxx & xxx \\\hline	
 	\end{tabular}
-
-	
 \end{table}
+
 % usecase3
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{|p{2cm}|p{3.5cm}|p{4cm}|p{2cm}|p{2.5cm}|}
 		\hline
 		\textbf{UC3} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Skift trin & Bruger vælger trin på skærm & Systemet skifter trin på transformer & xxx & xxx \\\hline
-		
-		
+		Skift trin & Bruger vælger trin op på skærm & Systemet skifter et trin op på transformer & xxx & xxx \\\hline
 	\end{tabular}
+\end{table}
 
-	
+\begin{table}[htbp]
+	\centering
+	\begin{tabular}{|p{2cm}|p{3.5cm}|p{4cm}|p{2cm}|p{2.5cm}|}
+		\hline
+		\textbf{UC3} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
+		Skift trin & Bruger vælger trin ned på skærm & Systemet skifter et trin ned på transformer & xxx & xxx \\\hline
+	\end{tabular}
 \end{table}
