--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -3,20 +3,23 @@
 
 \section{Ikke funktionelle krav}
 
-\subsection{Spændingsregulator}
+\subsection{Trintransformer}
 \begin{enumerate}
 	\item Maks belastning af spændingsregulatoren er 20VA
 	\item Nominel spænding på primær siden er 24VAC
 	\item Nominel spænding på sekundær siden er 4VAC
-	\item Maks strøm er 1A	
+	\item Maks strøm på sekundær siden er 5A	
 \end{enumerate}
 
 \subsection{Måleenhed}
 
 \begin{enumerate}
-	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 V, $\pm$ 200mV 
-	\item Måle strømniveauet ved trinskifteren og forbrugerne mellem 0 og 5A, $\pm$ 100mA
-	\item Beregne power factor $\pm$ 10$\%$
+	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 V
+	\item Måle spændingen med en præcision på $\pm$ 200mV
+	\item Måle strømmen ved trinskifteren og forbrugerne mellem 0 og 500mA
+	\item Måle strømmen med en præcision på $\pm$ 10mA 
+	\item Beregne power factor med en præcision på $\pm$ 10$\%$
+	\item Beregne THD med en præcision på $\pm$ 10$\%$
 \end{enumerate}
 
 
