Ikke funktionelle krav opdateret og delvist testet

--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/FunktionelleKrav.tex
@@ -27,26 +27,15 @@
 	\end{tabular}
 \end{table}
 
-	
-\end{table}
 % usecase3a
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{|p{2cm}|p{3cm}|p{4cm}|p{4.5cm}|p{1cm}|}
 		\hline
-		\textbf{UC3} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
+		\textbf{UC3a} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
 		Skift trin op & Systemet er i Manuel Mode. Bruger vælger Trin Op på skærmen & Systemet skifter trin op på transformeren og skærmen opdateres med nye værdier. & Transformeren skifter trin efter 2s. Derefter opdateres spænding, strøm, pf og THD på skærmen inden 2s.  & \checkmark \\\hline
 		
 		
-	\end{tabular}
-\end{table}
-
-\begin{table}[htbp]
-	\centering
-	\begin{tabular}{|p{2cm}|p{3.5cm}|p{4cm}|p{2cm}|p{2.5cm}|}
-		\hline
-		\textbf{UC3} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Skift trin & Bruger vælger trin ned på skærm & Systemet skifter et trin ned på transformer & xxx & xxx \\\hline
 	\end{tabular}
 \end{table}
 
@@ -55,7 +44,7 @@
 	\centering
 	\begin{tabular}{|p{2cm}|p{3cm}|p{4cm}|p{4.5cm}|p{1cm}|}
 		\hline
-		\textbf{UC3} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
+		\textbf{UC3b} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
 		Skift trin ned & Systemet er i Manuel Mode. Bruger vælger Trin Ned på skærmen & Systemet skifter trin ned på transformeren og skærmen opdateres med nye værdier. & Transformeren skifter trin efter 2s. Derefter opdateres spænding, strøm, pf og THD på skærmen inden 2s.  & \checkmark \\\hline
 		
 		
