--- a/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/Accepttestspecifikation/IkkeFunktionelleKrav.tex
@@ -5,10 +5,10 @@
 	\centering
 	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{3.5cm}|p{1cm}|}
 		\hline
-		\textbf{Spændingsregulator} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
+		\textbf{Trintransformer} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{OK} \\\hline
 		Nominel spænding på primærsiden er 24VAC & Spændingen på primærsiden måles. & Den målte værdi er 24VAC. & Der måles 23.88 VAC & \checkmark \\\hline
 		Nominel spænding på sekundær side er 4,5 eller 6 VAC afhængig af trin & Spændingen på sekundærsiden måles for hhv. trin 4, 5 og 6. & Den målte værdi er 4, 5 eller 6 VAC alt efter valgt trin. & Der måles hhv. 4, 5 og 6 VAC & \checkmark \\\hline
-		Maks strøm på sekundær side er 1 A. & Strømmen på sekundærsiden måles. & Den målte værdi overstiger ikke 1A. & xx  & xx \\\hline
+		Maks strøm på sekundær side er 5 A. & Strømmen på sekundærsiden måles. & Den målte værdi overstiger ikke 5A. & xx  & xx \\\hline
 	\end{tabular}
 	
 \end{table}
@@ -19,22 +19,20 @@
 	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
 		\hline
 		\textbf{Belastning} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. & Den givne modstand indsættes som belastning, og spændingen herover måles. & Spændingen over belastningen måles til 3,6V. & xxx & xxx \\\hline	
+		Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. & Den givne modstand indsættes som belastning, og spændingen herover måles. & Spændingen over belastningen måles til 3,6V. & Den målte værdi er 3.61 VAC & \checkmark \\\hline	
 	\end{tabular}
 
 	
 \end{table}
-% for brugergrænseflade
+
+% for måleenhed
 \begin{table}[htbp]
 	\centering
 	\begin{tabular}{|p{4cm}|p{3cm}|p{4cm}|p{2cm}|p{2.5cm}|}
 		\hline
-		\textbf{Brugergrænseflade} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
-		Punkt ?? & xxx & xxx & xxx & xxx \\\hline
-		Punkt?? & xx & xx & xx & xx \\\hline
-		
-		
+		\textbf{Måleenhed} & \textbf{Handling} & \textbf{Forventet resultat} & \textbf{Resultat} &\textbf{Kommentar} \\\hline
+			
 	\end{tabular}
-
+	
 	
 \end{table}
