--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -11,8 +11,12 @@
 	\item Maks strøm på sekundær siden er 5A	
 \end{enumerate}
 
-\subsection{Måleenhed}
+\subsection{Belastning}
+\begin{enumerate}
+	\item Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. & Den givne modstand indsættes som belastning, og spændingen herover måles.
+\end{enumerate}
 
+\subsection{Måleenhed}
 \begin{enumerate}
 	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 V
 	\item Måle spændingen med en præcision på $\pm$ 200mV
