Smårettelser i moscow, foranalyse og "Nettilmål"

--- a/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/MoSCoW.tex
@@ -7,12 +7,11 @@
 \item{Systemet \textbf{skal} bestå af en trinskifter 24/0-8V}
 \item{Systemet \textbf{skal} måle spænding, strøm og power factor centralt og decentralt}
 \item{Systemet \textbf{skal} vise data på en skærm}
-\item{Systemet \textbf{skal} simulere en distributionslinje og to forbrugere}
+\item{Systemet \textbf{skal} simulere en distributionslinje og flere forbrugere}
 \item{Systemet \textbf{skal} kunne reguleres manuelt}
 \item{Systemet \textbf{skal} måle harmoniske}
 \item{Systemet \textbf{burde} kunne reguleres automatisk}
 \item{Systemet \textbf{kunne} have en log}
-\item{Systemet \textbf{kunne} have flere end to forbrugere}
 \item{Distributionslinjen \textbf{kunne} indeholde en decentral producent}
 \item{Systemet \textbf{vil ikke} fjerne harmoniske} 
 \end{itemize}
