--- a/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
+++ b/ProjektDokumentation/sektioner/Integrationstest/NetTilMaal.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../../prj4projektdokumentation.tex
 
 \section{Samlet integrationstest}
-Denne test indeholder alle de enkelte moduler, som systemet består af, herunder Brugergrænseflade, Måleenhed, styringsenhed og trinskifter. 
+Denne test indeholder alle de enkelte moduler, som systemet består af, herunder Brugergrænseflade, Måleenhed, Styringsenhed og Trinskifter. 
 
 I dette afsnit testes at udregninger for hvordan nettet opfører sig stemmer overens med det, der måles med Måleenheden, og det der vises på brugergrænsefladen.
 Testene laves ved at måle på nettet med Måleenheden, som er forbundet til brugergrænsefladen, så resultaterne for målinger kan aflæses på skærmen. Værdierne sammenholdes med resultaterne fra simulering og beregning. 
