--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -13,7 +13,7 @@
 
 \subsection{Belastning}
 \begin{enumerate}
-	\item Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. & Den givne modstand indsættes som belastning, og spændingen herover måles.
+	\item Modstandsværdi på 43 $\Omega$ giver spændingsfald på 10\%, når spændingen fra regulatoren er 4V. Den givne modstand indsættes som belastning, og spændingen herover måles.
 \end{enumerate}
 
 \subsection{Måleenhed}
