Oprettet design afsnit til styringsenhed

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -147,6 +147,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/Distributionslinje}
 \input{sektioner/Design/Belastning}
 \input{sektioner/Design/Trinskifter}
+\input{sektioner/Design/Styringsenhed}
 \input{sektioner/Trinskifter/Modultest}
 \input{sektioner/Integrationstest/MaalTilPlc}
 \input{sektioner/Integrationstest/NetTilMaal}
