--- a/ProjektDokumentation/sektioner/Arkitektur/AllokeringsDiagram.tex
+++ b/ProjektDokumentation/sektioner/Arkitektur/AllokeringsDiagram.tex
@@ -1,4 +1,4 @@
-!TEX root = ../../prj4projektdokumentation.tex
+%!TEX root = ../../prj4projektdokumentation.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 \section{Allokeringsdiagram}
