--- a/ProjektDokumentation/sektioner/Design/Belastning.tex
+++ b/ProjektDokumentation/sektioner/Design/Belastning.tex
@@ -42,19 +42,19 @@ R_L^2+R_B^2+2\cdot R_L\cdot R_B+X_L^2=\frac{R_B^2}{0,81}
 \end{align}
 
 \begin{align}
-R_B^2\cdot (1-\frac{1}{0,81})+2\cdot R_L\cdot R_B+X_L=0
+R_B^2\cdot (1-\frac{1}{0,81})+2\cdot R_L\cdot R_B+X_L^2=0
 \end{align}
 
 Værdier indsættes og herved fås:
 
 \begin{align}
-R_B^2\cdot (-0,24) +10\cdot R_B+11,94=0
+R_B^2\cdot (-0,24) +12,4\cdot R_B+18,23=0
 \end{align}
 
 Andengrads ligning løses og derved findes den modstandsværdi, der vil give et spændingsfald på 10\%.
 
 \begin{align}
-R_B=\frac{10\pm\sqrt{100+4\cdot 0,24+11,94}}{-0,24\cdot 2}=\frac{-10\pm 10,55}{-0,47}=43,71 \Omega
+R_B=\frac{-12,4\pm\sqrt{153,76-4\cdot(-0,24)\cdot18,23}}{-0,24\cdot 2}=\frac{-12,4\pm 13,1}{-0,47}=54,3 \Omega
 \end{align}
 
 Denne modstandsværdi i det viste kredsløb og med den valgte distributionslinje vil resultere i at spændingen falder under det øsnkede niveau som er 4V. Der tages derfor udgangspunkt i denne værdi, men efterfølgende vil belastninger bestemmes ud fra simuleringer i værktøjet Multisim. 
