--- a/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
+++ b/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
@@ -3,7 +3,14 @@
 \chapter{Design af distributionslinje, belastning og trinskifter}
 
 \section{Distributionslinje}
-På baggrund af foranalysen er længden af distributionslinjen, der ønskes simuleret, valgt til 60 km. Ud fra datablade for den valgte kabeltype ses at der er vil være 0,1 $\Omega$ /km og 0,219 mH/km. For at kunne simulere disse værdier er opbygget et kredsløb med 6,2 $\Omega$ modstand i serie med en 13,6 mH spole. 
+På baggrund af foranalysen er længden af distributionslinjen, der ønskes simuleret, valgt til 60 km. Ud fra datablade for den valgte kabeltype ses at der er vil være 0,1 $\Omega$ /km og 0,219 mH/km. For at kunne simulere disse værdier er opbygget et kredsløb med 6,2 $\Omega$ modstand i serie med en 13,6 mH spole. Dette stemmer overens med teorien for korte transmissionslinjer, hvor kun modstand og spolevirkning indgår i modellen. Modellen ses på figur \ref{fig:Kortlinjemodel} og gælder for linjer op til 80 km. 
+
+\begin{figure}[htbp] % (alternativt [H])
+	\centering
+	\includegraphics[width=0.4\textwidth]{Figure/Kortlinjemodel2}
+	\caption{Model for kort transmissionslinje}
+	\label{fig:Kortlinjemodel}
+\end{figure}
 
 
 
