--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -149,6 +149,14 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/Trinskifter}
 \input{sektioner/Trinskifter/Modultest}
 \input{sektioner/Design/Styringsenhed}
+\chapter{Design af Måleenhed}
+\input{sektioner/Maale/Hardware}
+\input{sektioner/Maale/Software}
+\input{sektioner/Maale/Sampling}
+\input{sektioner/Maale/Fourier}
+\input{sektioner/Maale/THD}
+\input{sektioner/Maale/UART}
+\input{sektioner/Maale/Modultest}
 \input{sektioner/Integrationstest/MaalTilPlc}
 \input{sektioner/Integrationstest/NetTilMaal}
 \input{modulSkabelon}
