--- a/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/FunktionelleKrav.tex
@@ -23,10 +23,10 @@ Når spændingsregulatoren er i automatisk mode, kontrolleres spænding ved forb
 	\caption{Usecase Diagram}
 	\label{fig:UsecaseDiagram}
 \end{figure}
-Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatiske del af systemet er beskrevet i afsnit \ref{Automatisk mode}.
+Systemet indholder 3 usecases, der alle er initieret af brugeren. Den automatiske del af systemet er beskrevet i afsnit \ref{Afsnit: Automatisk mode}.
 
 \subsection{Aktør Beskrivelse}
-\textbf{Brugeren} er den primær aktør. Er en sikkerhedsgodkendt operatør der kan betjene trintransformeren manuelt.
+\textbf{Brugeren} er den primær aktør. En sikkerhedsgodkendt operatør der kan betjene trintransformeren manuelt.
 
 \subsection{Usecase 1 - Start manuel styring}
 \begin{table}[H]
