Udlæg til projektrapport

--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -105,7 +105,9 @@ linkcolor=Black, citecolor=Black]{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%%
              % RESUME & ABSTRACT %			
+\section*{Resume}
 \include{sektioner/Resume}
+\section*{Abstract}
 \include{sektioner/Abstract}
 %%%%%%%%%%%%%%%%%%%%%%%
 
@@ -119,17 +121,29 @@ linkcolor=Black, citecolor=Black]{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%%
                         % KAPITLER %			
+\chapter{Forord}                        
 \include{sektioner/Forord}
 \include{sektioner/Termliste}
+\chapter{Indledning}
 \include{sektioner/Indledning}
+\chapter{Metode og proces}
+\chapter{Kravspecifikation}
 \include{sektioner/Krav}
+\chapter{Foranalyse}
 \include{sektioner/Foranalyse}
+\chapter{Arkitektur}
 \include{sektioner/Arkitektur}
-\include{sektioner/DesignOgImplementering}
-\include{sektioner/ResultatOgDiskussion}
+\chapter{Design af distributionslinje, belastning og trinskifter}
+\chapter{Design af Styringsenhed}
+\chapter{Design af Målenhed}
+\chapter{Integrationstest}
+\chapter{Accepttest}
+\chapter{Resultat og Diskussion}
+\chapter{Fremtidigt arbejde}
 \include{sektioner/FremtidigtArbejde}
+\chapter{Perspektivering}
+\chapter{Konklusion}
 \include{sektioner/Konklusion}
-\include{sektioner/Udviklingsvaerktoejer}
 \include{sektioner/Bibliografi}
 %%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
