Styringsenhed teaser + afsnit

--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -148,6 +148,9 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Design/Belastning}
 \input{sektioner/Design/Trinskifter}
 \input{sektioner/Design/Styringsenhed}
+\input{sektioner/Design/PLC}
+\input{sektioner/Design/HMI}
+\input{sektioner/Design/Arduino}
 \input{sektioner/Trinskifter/Modultest}
 \input{sektioner/Integrationstest/MaalTilPlc}
 \input{sektioner/Integrationstest/NetTilMaal}
