--- a/ProjektDokumentation/sektioner/Design/Styringsenhed.tex
+++ b/ProjektDokumentation/sektioner/Design/Styringsenhed.tex
@@ -1,4 +1,6 @@
 % !TEX root = ../../prj4projektdokumentation.tex
 
-\chapter{Design af styringsenhed}
+\chapter{Design af Styringsenhed}
+
+Styringsenheden er den del der skal sørge for at modtage data fra Måleenhederne og ud fra disse data styre trinskifteren. Til at koordinere kommunikation fra flere Målenheder til en PLC er brugt en Arduino. Samtidig skal den informere en bruger om systemets tilstand gennem en burgergrænseflade. Her er anvendt en HMI. Det er PLC'en der står for at opdatere trinskifteren og HMI ud fra de modtagede data.
 
