--- a/ProjektDokumentation/prj4projektdokumentation.tex
+++ b/ProjektDokumentation/prj4projektdokumentation.tex
@@ -144,6 +144,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/AllokeringsDiagram}
 \input{sektioner/Arkitektur/BrugerGraenseFlade}
 \input{sektioner/foranalyse}
+\input{sektioner/Design/Kommunikationsprotokoller}
 \input{sektioner/Design/Distributionslinje}
 \input{sektioner/Design/Belastning}
 \input{sektioner/Design/Trinskifter}
