Mere dokumentation og billeder

--- a/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
+++ b/ProjektDokumentation/sektioner/Design/Distributionslinje.tex
@@ -13,4 +13,11 @@ På baggrund af foranalysen er længden af distributionslinjen, der ønskes simu
 \end{figure}
 
 
+Distributionslinjen er implementeret på et printkort, hvorpå to spoler og to modstande er monteret i serie for at opnå de ønskede værdier for 'kablet'. Der er desuden monteret en 1 $\Omega$ modstand i serie. Denne giver mulighed for at placere en Måleenhed til at overvåge denne del af systemet. Det færdige print til simulering af distributionslinje ses på figur \ref{fig:Disblinje}
 
+\begin{figure}[H] 
+	\centering
+	\includegraphics[width=0.7\textwidth]{Figure/Distributionslinje}
+	\caption{Simulering af distributionslinje}
+	\label{fig:Disblinje}
+\end{figure}
