--- a/ProjektDokumentation/sektioner/Design/Belastning.tex
+++ b/ProjektDokumentation/sektioner/Design/Belastning.tex
@@ -57,7 +57,16 @@ Andengrads ligning løses og derved findes den modstandsværdi, der vil give et 
 R_B=\frac{-12,4\pm\sqrt{153,76-4\cdot(-0,24)\cdot18,23}}{-0,24\cdot 2}=\frac{-12,4\pm 13,1}{-0,47}=54,3 \Omega
 \end{align}
 
-Denne modstandsværdi i det viste kredsløb og med den valgte distributionslinje vil resultere i at spændingen falder under det øsnkede niveau som er 4V. Der tages derfor udgangspunkt i denne værdi, men efterfølgende vil belastninger bestemmes ud fra simuleringer i værktøjet Multisim. 
+Denne modstandsværdi i det viste kredsløb og med den valgte distributionslinje vil resultere i at spændingen falder under det ønskede niveau som er 4V. Der tages derfor udgangspunkt i denne værdi, men efterfølgende vil belastninger bestemmes ud fra simuleringer i værktøjet Multisim. 
+
+Til implementering af belastninger/forbrugere er på baggrund af foregående beregninger valgt modstande i intervallet 16 $\Omega$ til 100 $\Omega$. Belastninger er placeret i parallel og til hver belastning hører en kontakt, således der let kan skiftes mellem forskellige værdier. Der er desuden monteret pin til forbindelse til distributionslinje og bananstik til forbindelse til 0V på transformeren. Yderligere er der for hver belastning monteret en 1 $\Omega$ modstand således Måleenheden kan overvåge tilstanden hos hver forbruger. Det færdige print med belastninger ses på figur \ref{fig:Belastning1}
+
+\begin{figure}[H] 
+	\centering
+	\includegraphics[width=0.7\textwidth]{Figure/Belastningskreds}
+	\caption{Færdigt print med belastninger/forbrugere}
+	\label{fig:Belastning1}
+\end{figure}
 
 
 
